--- a/projects.json
+++ b/projects.json
@@ -26,7 +26,7 @@
             "slug": "spaceverse",
             "title": "SpaceVerse",
             "cover": "spaceverse-cover.png",
-            "description": "SpaceVerse is an app for productivity. A place where you can focus on your task at hand while you travel around the world on your own desk. its still on its early stages and is still under development.",
+            "description": "SpaceVerse is an app for productivity. A place where you can focus on your task at hand while you travel around the world on your own desk. It's still on its early stages and is still under development.",
             "short_description": "is an app for productivity while you travel around the world.",
             "properties": [
                 {
