--- a/projects.json
+++ b/projects.json
@@ -40,8 +40,8 @@
             ],
             "links": [
                 {
-                    "title": "Temp-Website",
-                    "url": "https://spaceverse.vercel.app/"
+                    "title": "Website",
+                    "url": "https://spaceverse.leogadil.com/"
                 }
             ],
             "images": [],
